--- a/001.NuberGuessing.html
+++ b/001.NuberGuessing.html
@@ -49,7 +49,7 @@
     new Vue({
       el:"#container",
       data:{
-        msg:"Hello VueJs"
+        msg:"猜数字小游戏，数字范围为：1~100"
       }
     })
   </script>
