--- a/001.NuberGuessing.html
+++ b/001.NuberGuessing.html
@@ -3,55 +3,24 @@
  <head>
  <meta charset="UTF-8">
  <title>vue组件猜数字游戏</title>
-  <script src="js/vue.js"></script>
  </head>
  <body>
- <div id="container">
-    <p>{{msg}}</p>
-    <my-game></my-game>
+  <div id="app">
+	  欢迎来到猜数字游戏！请输入数字，数字范围在1~100：<br />
+	  <input type="text" v-model="num" />
+	  <p v-if=" num>message">抱歉，猜大了！</p>
+	  <p v-if=" num<message">抱歉，猜小了！</p>
+	  <p v-if=" num==message">恭喜，猜对了！</p>
   </div>
-  <script>
-  //完成组件的创建
-    Vue.component("my-game",{
-      data:function(){
-        return {
-          randomNum:0,
-          myInput:0,
-          result:""
-        }
-      },
-      template:`
-        <div>
-          <input type="text" v-model.number="myInput"/>
-          <br>
-          <p>{{result}}</p>
-        </div>
-      `,
-      beforeMount: function () {
-    //创建一个100以内的随机的整数
-    var num = Math.floor(Math.random()*100);
-    console.log(num);
-    this.randomNum = num;
-    },
-      //当数据改变时执行的操作
-      watch:{
-        myInput:function(){
-          if(this.myInput==this.randomNum){
-            this.result = "恭喜：猜对了";
-          }else if(this.myInput>this.randomNum){
-            this.result = "猜大了";
-          }else{
-            this.result = "猜小了";
-          }
-        }
-      }
-    })
-    new Vue({
-      el:"#container",
-      data:{
-        msg:"猜数字小游戏，数字范围为：1~100"
-      }
-    })
+  <script src="js/vue.js" type="text/javascript" charset="UTF-8"></script>
+  <script type="text/javascript">
+	  let v=new Vue({
+	  	el:'#app',
+		data:{
+			message:Math.round(Math.random()*100),
+			num:0
+		}
+	  })
   </script>
  </body>
 </html>
